documentos base criados

--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,10 @@
 @charset "UTF-8";
+
+:root{
+    --cor0: #D2E6F1;
+    --cor1: #52D9CB;
+    --cor2: #278C82;
+    --cor3: #093536;
+    --cor4: #414550;
+    --cor5: #2B2E36;
+}
